Début de la gestion des partenaires

--- a/Admin/menulog.html
+++ b/Admin/menulog.html
@@ -85,23 +85,23 @@
 
 
 <div class="row">
+<!-- cette div ce ferme dans demande inscription -->
     <div class="col-md-3" >
         <div class="list-group">
             <a href="../calendrier" class="list-group-item list-group-item-success">Voir calendrier réunion</a>
             <a href="#" class="list-group-item list-group-item-success" data-toggle="modal" data-target="#mailList" >Creer la mailling list</a>
-            <a href="#" class="list-group-item list-group-item-info" data-toggle="modal" data-target="#modalModifAccueil">Modifier texte de l'accueil</a>
+            <a href="#" class="list-group-item list-group-item-success" data-toggle="modal" data-target="#modalModifAccueil">Modifier texte de l'accueil</a>
             <!--<a href="#" class="list-group-item list-group-item-warning">Modifier photos du slide</a>-->
-            <a href="../gestionPhoto/ajouter.php" class="list-group-item list-group-item-danger">Ajouter photos d'évenements</a>
+            <a href="../gestionPhoto/ajouter.php" class="list-group-item list-group-item-success">Ajouter photos d'évenements</a>
             
             <!--<a href="#" class="list-group-item list-group-item-danger">Ajouter un historique de reunions</a>
             <a href="#" class="list-group-item list-group-item-danger">Voir les historiques</a> -->
-            <a href="#" class="list-group-item list-group-item-success" data-toggle="modal" data-target="#modalChangemdp" >Changer le mot de passe admin</a>
-            <a href="../../accueil/index.php" class="list-group-item list-group-item-danger">Voir le site public</a>
+            <a href="../partenaires/" class="list-group-item list-group-item-success">Modifier les partenaires</a>
+            <a href="#" class="list-group-item list-group-item-success" data-toggle="modal" data-target="#modalChangemdp">Changer le mot de passe admin</a>
+            <a href="../../accueil/index.php" class="list-group-item list-group-item-success">Voir le site public</a>
             
         </div>
     </div>
-    <!-- cette div ce ferme dans demande inscription -->
-
 
     <!-- Modal Déconnexion -->
     <div class="modal fade" id="modalDeconnnexion" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
@@ -121,7 +121,8 @@
             </div>
         </div> 
     </div>
-    <!-- modal changement de mot de passe admin -->
+
+    <!-- Modal changement de mot de passe admin -->
     <div class="modal fade" id="modalChangemdp" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
