--- a/Admin/reparation/banniereReparationAdd.html
+++ b/Admin/reparation/banniereReparationAdd.html
@@ -1,5 +1,5 @@
 <div class="row"> 
   <div class="col-md-12">
-    <div class="alert alert-success"><center>La répraration a bien été ajouté !</center></div>
+    <div class="alert alert-success"><center>La réparation a bien été ajoutée !</center></div>
   </div>
 </div>
