Description de l'inscription

--- a/menu.html
+++ b/menu.html
@@ -74,6 +74,7 @@
       </div>
       <form method="post" enctype="multipart/form-data" action="../traitement/register.php">
         <div class="modal-body">
+          <div class="alert alert-warning"><center>Pour que votre inscription soit validée par un administrateur, vous devez avoir cotisé au bureau de l'association.<br/>Le montant de la cotisation à l'année est de 5€.</center></div>
         	<i>*</i> Nom : <input type="text" class="form-control" id="inputNom" placeholder="Ex : Dupont" name="inputNom" required/><br/><br/>
         	<i>*</i> Prenom : <input type="text" class="form-control" id="inputPrenom" placeholder="Ex : Jean" name="inputPrenom" required/><br/><br/>
           <i>*</i> Date de naissance : <input type="date" class="form-control" id="inputDateNaissance" placeholder="Ex : 25-10-1994" name="inputDateNaissance" required/><br/><br/>
