--- a/Admin/footer.html
+++ b/Admin/footer.html
@@ -1,3 +1,30 @@
+<br/><br/><br/><br/><br/><br/><br/><br/><br/>
+<div class="row" style="margin-bottom: 20px">
+    <div class="col-md-12">
+    	<center>
+			<div id="footer">
+				<div class="panel-footer">
+					<!-- <p> -->
+						<a href="https://www.facebook.com/VelocampusDuLion" onclick="window.open(this.href); return false;">
+							<img src="../../images/facebook.png" width="20" height="20">
+							</img>
+						</a> 
+						<a href="https://twitter.com/VelocampusLion" onclick="window.open(this.href); return false;">
+							<img src="../../images/twitter.png" width="20" height="20">
+							</img>
+						</a>  
+						
+						- Copyright © 2014 VéloCampus | Designed By <a href="https://www.facebook.com/pierro71?fref=ts" onclick="window.open(this.href); return false;">Pierre </a>, <a href="https://www.facebook.com/geoffrey.glangine?fref=ts" onclick="window.open(this.href); return false;">Geoffrey </a>,  <a href="https://www.facebook.com/morgane.cabrol1?fref=ts" onclick="window.open(this.href); return false;">Morgane </a>| Tous droits réservés.
+
+						
+
+					<!-- </p> -->
+				</div>
+			</div>
+		</center>
+	</div>
+</div>
+
 </div> <!-- fin container !!!!!!! -->
 
 
