Modif page modif velo

--- a/Admin/footer.html
+++ b/Admin/footer.html
@@ -14,7 +14,7 @@
 							</img>
 						</a>  
 						
-						- Copyright © 2014 VéloCampus | Designed By <a href="https://www.facebook.com/pierro71?fref=ts" onclick="window.open(this.href); return false;">Pierre </a>, <a href="https://www.facebook.com/geoffrey.glangine?fref=ts" onclick="window.open(this.href); return false;">Geoffrey </a>,  <a href="https://www.facebook.com/morgane.cabrol1?fref=ts" onclick="window.open(this.href); return false;">Morgane </a>| Tous droits réservés.
+						- Copyright © 2014 VéloCampus | Designed By <a href="https://twitter.com/Kiwhacks" onclick="window.open(this.href); return false;">Pierre</a>, <a href="https://www.facebook.com/geoffrey.glangine?fref=ts" onclick="window.open(this.href); return false;">Geoffrey</a>,  <a href="https://www.facebook.com/morgane.cabrol1?fref=ts" onclick="window.open(this.href); return false;">Morgane</a> | Tous droits réservés.
 
 						
 
