--- a/Admin/menulog.html
+++ b/Admin/menulog.html
@@ -106,6 +106,14 @@ if(isset($_SESSION['suppvelo']) && $_SESSION['suppvelo'] == -1) {
     include("../bannieresuppVeloErr.html");
     $_SESSION['suppvelo'] = 0;
 }
+if(isset($_SESSION['modvelo']) && $_SESSION['modvelo'] == 1) {
+    include("../bannieremodVelo.html");
+    $_SESSION['modvelo'] = 0;
+}
+if(isset($_SESSION['modvelo']) && $_SESSION['modvelo'] == -1) {
+    include("../bannieremodVeloErr.html");
+    $_SESSION['modvelo'] = 0;
+}
 
 if(isset($_SESSION['ajMembre']) && $_SESSION['ajMembre'] == 1) {
     ?><div class="row"> 
