--- a/Admin/menulog.html
+++ b/Admin/menulog.html
@@ -126,7 +126,7 @@ if(isset($_SESSION['ajMembre']) && $_SESSION['ajMembre'] == 1) {
 if(isset($_SESSION['ajMembre']) && $_SESSION['ajMembre'] == -1) {
     ?><div class="row"> 
   <div class="col-md-12">
-    <div class="alert alert-success"><center>Le membre n'a pas pu être ajouté.</center></div>
+    <div class="alert alert-danger"><center>Le membre n'a pas pu être ajouté.</center></div>
   </div>
 </div><?php
     $_SESSION['ajMembre'] = 0;
