--- a/Admin/menulog.html
+++ b/Admin/menulog.html
@@ -148,6 +148,22 @@ if (isset($_SESSION['delPar']) && $_SESSION['delPar'] == -1) {
     include("../bannierePardelErr.html");
     $_SESSION['delPar'] = 0;
 }
+if (isset($_SESSION['delMembre']) && $_SESSION['delPar'] == 1) {
+    ?><div class="row"> 
+  <div class="col-md-12">
+    <div class="alert alert-success"><center>Le membre a bien été supprimé.</center></div>
+  </div>
+</div><?php
+    $_SESSION['delMembre'] = 0;
+}
+if (isset($_SESSION['delMembre']) && $_SESSION['delPar'] == -1) {
+    ?><div class="row"> 
+  <div class="col-md-12">
+    <div class="alert alert-danger"><center>Le membre n'a pas pu être supprimé.</center></div>
+  </div>
+</div><?php
+    $_SESSION['delMembre'] = 0;
+}
 if (isset($_SESSION['addcadenas']) && $_SESSION['addcadenas'] == 1) {
     include("../banniereaddCad.html");
     $_SESSION['addcadenas'] = 0;
