--- a/Admin/menulog.html
+++ b/Admin/menulog.html
@@ -29,7 +29,7 @@
                         <li class="divider"></li>
                         <li><a href="../cadenas">Cadenas</a></li>
                         <li class="divider"></li>
-                        <li><a href="#">Types</a></li>
+                        <li><a href="../modèle">Modèles</a></li>
                         
                     </ul>
                 </li>
