--- a/Admin/menulog.html
+++ b/Admin/menulog.html
@@ -193,7 +193,7 @@ if (isset($_SESSION['modcadenas']) && $_SESSION['modcadenas'] == -1) {
 if (isset($_SESSION['suppMod']) && $_SESSION['suppMod'] == 12) {
     ?><div class="row"> 
   <div class="col-md-12">
-    <div class="alert alert-success"><center>Le modèle a bien été supprimer</center></div>
+    <div class="alert alert-success"><center>Le modèle a bien été supprimé.</center></div>
   </div>
 </div><?php
     $_SESSION['suppMod'] = 0;
@@ -201,7 +201,7 @@ if (isset($_SESSION['suppMod']) && $_SESSION['suppMod'] == 12) {
 if (isset($_SESSION['modcadenas']) && $_SESSION['modcadenas'] == -12) {
       ?><div class="row"> 
   <div class="col-md-12">
-    <div class="alert alert-danger"><center>Le modèle n'a pas pu être supprimer</center></div>
+    <div class="alert alert-danger"><center>Le modèle n'a pas pu être supprimé.</center></div>
   </div>
 </div><?php
     $_SESSION['suppMod'] = 0;
