--- a/Admin/menulog.html
+++ b/Admin/menulog.html
@@ -206,6 +206,25 @@ if (isset($_SESSION['modcadenas']) && $_SESSION['modcadenas'] == -12) {
 </div><?php
     $_SESSION['suppMod'] = 0;
 }
+
+
+if (isset($_SESSION['addMod']) && $_SESSION['addMod'] == 1) {
+       ?><div class="row"> 
+  <div class="col-md-12">
+    <div class="alert alert-success"><center>Le modèle a bien été ajouté.</center></div>
+  </div>
+</div><?php
+    $_SESSION['addMod'] = 0;
+}
+if (isset($_SESSION['addMod']) && $_SESSION['addMod'] == -1) {
+          ?><div class="row"> 
+  <div class="col-md-12">
+    <div class="alert alert-danger"><center>Le modèle n'a pas pu être ajouté.</center></div>
+  </div>
+</div><?php
+    $_SESSION['addMod'] = 0;
+}
+
 ?>
 
 
