--- a/Admin/menulog.html
+++ b/Admin/menulog.html
@@ -267,7 +267,7 @@ if (isset($_SESSION['retloc']) && $_SESSION['retloc'] == -1) {
     <div class="col-md-3" >
         <div class="list-group">
             <a href="../calendrier" class="list-group-item list-group-item-success">Voir le calendrier des réunions</a>
-            <a href="#" class="list-group-item list-group-item-success" data-toggle="modal" data-target="#mailList" >Créer la <i>mailling list</i></a>
+            <a href="#" class="list-group-item list-group-item-success" data-toggle="modal" data-target="#mailList" >Créer la <i>mailing list</i></a>
             <a href="#" class="list-group-item list-group-item-success" data-toggle="modal" data-target="#modalModifAccueil">Modifier le texte de l'accueil</a>
             <!--<a href="#" class="list-group-item list-group-item-warning">Modifier photos du slide</a>-->
             <a href="../gestionPhoto/ajouter.php" class="list-group-item list-group-item-success">Ajouter des photos d'évènements</a>
